cambios frontpage fuente

--- a/app/assets/stylesheets/social_stream/base/_frontpage.css.sass
+++ b/app/assets/stylesheets/social_stream/base/_frontpage.css.sass
@@ -5,3 +5,9 @@
     margin-right: auto
     margin-top: 150px
     width: 380px
+  h1, h2, h3, label, a,
+    color: #FFF
+
+body
+  background-image: url(himalaya.jpg) 
+  background-repeat: repeat-y
