--- a/app/assets/stylesheets/social_stream/base/_footer.css.sass
+++ b/app/assets/stylesheets/social_stream/base/_footer.css.sass
@@ -1,10 +1,15 @@
 .footer,
 .footerFront
+  margin-left: auto
+  margin-right: auto
   @include makeColumn(12, 0)
   @include menuHorizontal
   margin-top: 20px
   height: 40px
+  width: 845px
   .f1
+    margin-left: auto
+    margin-right:auto
     display: inline
     li
       display: inline
