--- a/app/views/layouts/frontpage.html.erb
+++ b/app/views/layouts/frontpage.html.erb
@@ -20,7 +20,7 @@
     </script>
     <%= yield :headers %>
   </head>
-  <body>
+  <body class="fondo">
 
     <div class="wrapper container">
       <header id="header">
