--- a/app/assets/stylesheets/social_stream/bootstrap-rewrite/_navbar.scss
+++ b/app/assets/stylesheets/social_stream/bootstrap-rewrite/_navbar.scss
@@ -28,8 +28,10 @@
 // Navbar search
 // -------------------------
 .navbar-search {
+  margin-right: 20px;
   .search-query {
   	margin-top: 6px;
+    margin-right: 20px;
     padding: 1px 11px 0;
     @include font-sans-serif(12px, normal, 1);
     @include border-radius(5px); // redeclare because of specificity of the type attribute
