--- a/app/views/layouts/_header_signed_in.erb
+++ b/app/views/layouts/_header_signed_in.erb
@@ -3,15 +3,6 @@
     <%= link_to(image_tag('header-logo.png', :alt => t('site.name')), root_path, class: 'brand') %>
 
     <!-- FIXME: search javascript functionality in 'layouts/search' -->
-    <div class="search-nav">
-      <%= form_tag search_path, method: 'get', class: "navbar-search pull-left" do %>
-        <%= text_field_tag :q, nil, autocomplete: :off, class: 'search-query', placeholder: t('search.name') %>
-      <% end %>
-    </div>
-    <div class="explore-nav">
-      <%= link_to(raw("<i class='icon_navbar-home'></i> "), explore_path)%>
-      or explore
-    </div>
      <ul class="nav pull-right">
       <li>
         <%= link_to current_subject do %>
@@ -35,5 +26,10 @@
         <%= render partial: 'layouts/header_dropdown_menu' %>
       </li>
     </ul>
+    <div class="search-nav">
+      <%= form_tag search_path, method: 'get', class: "navbar-search pull-right" do %>
+        <%= text_field_tag :q, nil, autocomplete: :off, class: 'search-query', placeholder: t('search.name') %>
+      <% end %>
+    </div>
   </nav>
 </header>
