--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="f1">
   <ul>
     <li><%= Date.today.year %> © </li>
-    <li id="trade_mark"><%= link_to t('site.name'), 'http://social-stream.dit.upm.es/' %></li>
+    <li>smart city guide</li>
   </ul>
 </div>
 <div class="f2">
