--- a/app/assets/stylesheets/social_stream/base/_frontpage.css.sass
+++ b/app/assets/stylesheets/social_stream/base/_frontpage.css.sass
@@ -7,7 +7,9 @@
     width: 380px
   h1, h2, h3, label, a,
     color: #FFF
-    
+
 .fondo   
   background-image: url(himalaya.jpg) 
   background-repeat: repeat-y
+.pois
+  font-size: 12px
