--- a/app/views/home/_pois.html.erb
+++ b/app/views/home/_pois.html.erb
@@ -1,18 +1,18 @@
 <div style="margin-bottom: 18px;" class="tabbable">
   <ul class="nav nav-tabs">
-	  <li class=""><a data-toggle="tab" href="#tab1">Section 1</a></li>
-	  <li class=""><a data-toggle="tab" href="#tab2">Section 2</a></li>
-	  <li class="active"><a data-toggle="tab" href="#tab3">Section 3</a></li>
+	  <li class=""><a data-toggle="tab" href="#tab1">Places</a></li>
+	  <li class=""><a data-toggle="tab" href="#tab2">Routes</a></li>
+	  <li class="active"><a data-toggle="tab" href="#tab3">Guides</a></li>
 	 </ul>
 	<div style="padding-bottom: 9px; border-bottom: 1px solid #ddd;" class="tab-content">
   	<div id="tab1" class="tab-pane">
-      <p>I'm in Section 1.</p>
+      <p>Places</p>
   	</div>
     <div id="tab2" class="tab-pane">
-      <p>Howdy, I'm in Section 2.</p>
+      <p>Routes</p>
     </div>
     <div id="tab3" class="tab-pane active">
-      <p>What up girl, this is Section 3.</p>
+      <p>Guides</p>
     </div>
   </div>
 </div>
