--- a/app/views/home/_true_pois.html.erb
+++ b/app/views/home/_true_pois.html.erb
@@ -1,29 +1,29 @@
 <ul class="thumbnails">
-  <li class="span4">
-    <div class="thumbnail">
-      <img data-src="holder.js/300x200" alt="">
+  <li class="span3">
+    <div class="thumbnail pois">
+      <a href=""><img src="assets/alcazar.JPG" alt=""></a>
       <div class="caption">
-        <h3>Thumbnail label</h3>
+        <h4>Alcázar</h4>
         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-        <p><a href="#" class="btn btn-primary">Action</a> <a href="#" class="btn">Action</a></p>
+        <p><a href="#" class="btn btn-primary">Add</a></p>
       </div>
     </div>
   </li>
-  <li class="span4">
-    <div class="thumbnail">
-      <img data-src="holder.js/300x200" alt="">
+  <li class="span3">
+    <div class="thumbnail pois">
+      <a href=""><img src="assets/alcazar.JPG" alt=""></a>
       <div class="caption">
-        <h3>Thumbnail label</h3>
+        <h4>Alcázar</h4>
         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-        <p><a href="#" class="btn btn-primary">Action</a> <a href="#" class="btn">Action</a></p>
+        <p><a href="#" class="btn btn-primary">Add</a></p>
       </div>
     </div>
   </li>
-  <li class="span4">
-    <div class="thumbnail">
-      <a href=""><img src="alcazar.jpg" alt=""></a>
+  <li class="span3">
+    <div class="thumbnail pois">
+      <a href=""><img src="assets/alcazar.JPG" alt=""></a>
       <div class="caption">
-        <h3>Alcázar</h3>
+        <h4>Alcázar</h4>
         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
         <p><a href="#" class="btn btn-primary">Add</a></p>
       </div>
