changes on home

--- a/app/assets/stylesheets/smart_city_guides/home.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/home.css.sass
@@ -43,6 +43,9 @@
 				.guide
 					@include makeColumn(8, 0)
 					margin-left: 0px
+					.item_alone
+						@include makeColumn(3, 0)
+						margin-left: 2px
 
 
 	.right_home
