--- a/app/views/guide/_item.html.erb
+++ b/app/views/guide/_item.html.erb
@@ -1,4 +1,4 @@
-				<li class="span3">
+				<li class="item_alone">
 					<div class="thumbnail">
 						<%= image_tag('ninja.jpeg') %>
 						<div class="caption">
@@ -6,6 +6,32 @@
 							<p>justo odio egestas eget quam. Donec id elit </p>
 							<p>
 								<a class="btn btn-primary" href="#">Action</a>
+								<a class="btn" href="#">Action</a>
+							</p>
+						</div>
+					</div>
+				</li>
+								<li class="item_alone">
+					<div class="thumbnail">
+						<%= image_tag('ninja.jpeg') %>
+						<div class="caption">
+							<h4>Thumbnail</h4>
+							<p>justo odio egestas eget quam. Donec id elit </p>
+							<p>
+								<a class="btn btn-primary" href="#">Action</a>
+								<a class="btn" href="#">Action</a>
+							</p>
+						</div>
+					</div>
+				</li>
+								<li class="item_alone">
+					<div class="thumbnail">
+						<%= image_tag('ninja.jpeg') %>
+						<div class="caption">
+							<h4>Thumbnail</h4>
+							<p>justo odio egestas eget quam. Donec id elit </p>
+							<p>
+								<a class="btn btn-primary" href="#">Add</a>
 								<a class="btn" href="#">Action</a>
 							</p>
 						</div>
