--- a/app/assets/stylesheets/social_stream/places/_carousel.css.sass
+++ b/app/assets/stylesheets/social_stream/places/_carousel.css.sass
@@ -12,3 +12,19 @@
     display: block
     margin-left: auto
     margin-right: auto
+
+.carousel-caption 
+  background: none
+  bottom: 36%
+  left: 21%
+  padding: 15px
+  position: absolute
+  right: 0
+
+#myCarousel
+  height: 400px
+  .carousel-inner
+    .item
+      img
+        width: 100%
+        height: 400px
