--- a/app/views/places/_carousel.html.erb
+++ b/app/views/places/_carousel.html.erb
@@ -4,14 +4,42 @@
   <div class="no-carousel"><%= thumb_for(photos.first, '540x220') %></div>
   <% else %>
     <div id="myCarousel" class="carousel slide">
-      <!-- Carousel items -->
+        <!-- Carousel items -->
       <div class="carousel-inner">
-        <div class="active item"><%= thumb_for(photos.first, '540x220') %></div>
-        <% photos[1..(photos.length() -1)].each do |p| %>
-          <div class="item"><%= thumb_for(p, '540x220') %></div>
-        <% end %>
+        <div class="active item">
+          <img src="/assets/pepino.jpg">
+
+          <div class="container">
+            <div class="carousel-caption span8">
+              <h1>Example headline.</h1>
+              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <a class="btn btn-large btn-primary" href="#">Sign up today</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="item"><img src="/assets/pepino2.jpg">
+          <div class="container">
+            <div class="carousel-caption span8">
+              <h1>Example headline.</h1>
+              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <a class="btn btn-large btn-primary" href="#">Sign up today</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="item"><img src="/assets/pepino3.jpg">
+          <div class="container">
+            <div class="carousel-caption span8">
+              <h1>Example headline.</h1>
+              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <a class="btn btn-large btn-primary" href="#">Sign up today</a>
+            </div>
+          </div>
+        </div>
+
       </div>
-      <!-- Carousel nav -->
+    <!-- Carousel nav -->
       <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
       <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
     </div>
