--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -3,16 +3,19 @@
 
 <%= div_for @place do %>
 	<div class="central">
-	  <h2><%= @place.title %></h2>
+	  <h2 class="titlecentral">Alcazar</h2>
 
     <%#= place_timeline_thumb(@place) %>
-    <%= render :partial => 'place_info' %>
+    
     <%= render :partial => 'carousel' %>
+    <%= render :partial => 'place_info' %>
+
+  <div class="span6 restructure">
 
     <%= gmaps(:map_options => { :container_class => "map_container", :id => "map", :class => "gmaps4rails_map", :auto_zoom => false, :zoom => 16 }, :markers => {:data => @json} )%>
           
     <%= yield :scripts %>
-
+</div>
     <% unless @place.description.blank? %>
       <div class="description">
         <h3><%= t('place.info.description.description') %></h3>
@@ -21,13 +24,7 @@
     <% end %>
 
 		<div class="tabbable">
-			<ul class="nav nav-tabs">
-		    <li class="active">
-		      <a href="#comments" data-toggle="tab">
-		        <%= t 'comment.title.other' %>
-		      </a>
-		    </li>
-		  </ul>
+			
 
 		  <div class="tab-content">
 		    <div id="comments" class="comments">
@@ -38,36 +35,8 @@
 		</div>
 	</div>
 
-  <div class="details">
-    <div class="tabbable">
-      <ul class="nav nav-tabs">
-        <li class="<%= place_details_tab_class @place, :info %>">
-          <%= link_to t('place.details.info'), '#place-info', 'data-toggle' => 'tab' %>
-        </li>
-
-        <% if can? :update, @place %>
-        <li class="<%= place_details_tab_class @place, :edit %>">
-
-          <%= link_to (raw("<i class='icon_tool16-edit'></i> ")), '#place-edit', 'data-toggle' => 'tab' %>
-          <!--alt: t('document.actions.edit'),-->
-
-        </li>
-        <% end %>
-      </ul>
-    </div>
-
-    <div class="tab-content">
-      <div class="tab-pane <%= place_details_tab_class @place, :info %>" id="place-info">
-        <%= render partial: 'info', locals: { place: @place } %>
-      </div>
-      <% if can? :update, @place %>
-        <div class="tab-pane <%= place_details_tab_class @place, :edit %>" id="place-edit">
-          <%= render :partial => 'form_photo' %>
-          <%= render :partial => 'form_description' %>
-          <%#<%= render partial: 'form', locals: { place: @place } %>
-        </div>
-      <% end %>
-    </div>
+ 
+    
   </div>
 <% end %>
 
