home and time line

--- a/app/assets/stylesheets/social_stream-base.css.sass
+++ b/app/assets/stylesheets/social_stream-base.css.sass
@@ -15,15 +15,14 @@
 @import "social_stream/base/toolbar"
 @import "social_stream/base/content"
 @import "social_stream/base/content_home"
-@import "social_stream/base/wrapper_activities"
-@import "social_stream/base/timeline"
+//@import "social_stream/base/timeline"
 @import "social_stream/base/sidebar"
 @import "social_stream/base/notifications"
 @import "social_stream/base/conversation"
 @import "social_stream/base/adjust"
 @import "social_stream/base/index"
 @import "social_stream/base/footer"
-@import "social_stream/base/layaut"
+//@import "social_stream/base/layaut"
 @import "social_stream/base/fcbk"
 @import "social_stream/base/profile"
 @import "social_stream/base/groups"
@@ -35,5 +34,7 @@
 @import "social_stream/base/explore-search"
 
 @import "smart_city_guides/home"
+@import "smart_city_guides/layout"
+@import "smart_city_guides/timeline"
 
 
