--- a/app/views/documents/_new_activity.html.erb
+++ b/app/views/documents/_new_activity.html.erb
@@ -1,3 +1,5 @@
+<!--
 <button class="new_document btn" data-path="<%= documents_path %>">
-  <%= image_tag 'icons/attach.png', alt: t('document.new_activity.attach'), title: t('document.new_activity.attach') %>
+  <%#= image_tag 'icons/attach.png', alt: t('document.new_activity.attach'), title: t('document.new_activity.attach') %>
 </button>
+-->
