--- a/app/views/layouts/_header_signed_in.erb
+++ b/app/views/layouts/_header_signed_in.erb
@@ -1,12 +1,26 @@
-<header class="navbar navbar">
+<header class="navbar navbar-inverse ">
+
+
   <nav class="navbar-inner">
-    <%= link_to(image_tag('header-logo.png', :alt => t('site.name')), root_path, class: 'brand') %>
+    <%#= link_to(image_tag('header-logo.png', :alt => t('site.name')), root_path, class: 'brand') %>
 
     <!-- FIXME: search javascript functionality in 'layouts/search' -->
-     <ul class="nav pull-right">
+    <ul class="nav pull-left">
+      <li>
+        <a href="#">planification</a>
+      </li>
+        <li>
+        <a href="#">my guides</a>
+      </li>
+      <li>
+        <a href="#">daily travel</a>
+      </li>
+    </ul>
+
+    <ul class="nav pull-right">
       <li>
         <%= link_to current_subject do %>
-          <%= image_tag current_subject.logo.url(:small) %>
+          <%#= image_tag current_subject.logo.url(:small) %>
           <span class="name"><%= truncate_name(current_subject.name, length: 15) %></span>
         <% end %>
       </li>
@@ -17,7 +31,7 @@
         <%= link_to(raw("<i class='icon_navbar-followers'></i> "), contacts_path) %>
       </li>
       <li>
-        <%= link_to(raw("<i class='icon_navbar-message'></i> "), conversations_path) %> 
+        <%#= link_to(raw("<i class='icon_navbar-message'></i> "), conversations_path) %> 
           <!-- <span id="header_inbox_count">
             <%= link_to(current_subject.unread_messages_count.to_s, conversations_path) %>
           </span> -->
@@ -25,11 +39,13 @@
       <li> 
         <%= render partial: 'layouts/header_dropdown_menu' %>
       </li>
-    </ul>
-    <div class="search-nav">
+          <div class="search-nav pull-right">
       <%= form_tag search_path, method: 'get', class: "navbar-search pull-right" do %>
         <%= text_field_tag :q, nil, autocomplete: :off, class: 'search-query', placeholder: t('search.name') %>
       <% end %>
     </div>
+    </ul>
+
   </nav>
+
 </header>
