--- a/app/views/layouts/_header_signed_in.erb
+++ b/app/views/layouts/_header_signed_in.erb
@@ -13,7 +13,8 @@
         <a href="#">my guides</a>
       </li>
       <li>
-        <a href="#">daily travel</a>
+
+        <a href="/daily_travel">daily travel</a>
       </li>
     </ul>
 
