Add diary and planning models and controllers

--- a/app/views/layouts/_header_signed_in.erb
+++ b/app/views/layouts/_header_signed_in.erb
@@ -7,14 +7,10 @@
     <!-- FIXME: search javascript functionality in 'layouts/search' -->
     <ul class="nav pull-left">
       <li>
-        <a href="#">planification</a>
-      </li>
-        <li>
-        <a href="#">my guides</a>
+        <a href="/plannings">my guides</a>
       </li>
       <li>
-
-        <a href="/daily_travel">daily travel</a>
+        <a href="/diaries">my diaries</a>
       </li>
     </ul>
 
