--- a/app/views/diaries/_item.html.erb
+++ b/app/views/diaries/_item.html.erb
@@ -1,6 +1,6 @@
-				<li class="item_alone">
+				<li class="span3">
 					<div class="thumbnail">
-						<%= image_tag('ninja.jpeg') %>
+						<%= image_tag('one.jpg') %>
 						<div class="caption">
 							<h4>Thumbnail</h4>
 							<p>justo odio egestas eget quam. Donec id elit </p>
