--- a/app/views/layouts/_header_signed_in.erb
+++ b/app/views/layouts/_header_signed_in.erb
@@ -28,7 +28,7 @@
         <%= link_to(raw("<i class='icon_navbar-followers'></i> "), contacts_path) %>
       </li>
       <li>
-        <%#= link_to(raw("<i class='icon_navbar-message'></i> "), conversations_path) %> 
+        <%= link_to(raw("<i class='icon_navbar-message'></i> "), conversations_path) %> 
           <!-- <span id="header_inbox_count">
             <%= link_to(current_subject.unread_messages_count.to_s, conversations_path) %>
           </span> -->
