--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -1,1 +1,5 @@
 <h2>Edit Place</h2>
+
+<%= render :partial => 'form_photo' %>
+<%= render :partial => 'form_description' %>
+<%= render :partial => 'form' %>
