--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -16,6 +16,7 @@
  */
 
 @import "social_stream-base"
+@import "smart_city_guide"
 @import "social_stream-documents"
 @import "social_stream-places"
 
