--- a/app/assets/stylesheets/smart_city_guide.css.sass
+++ b/app/assets/stylesheets/smart_city_guide.css.sass
@@ -1,1 +1,6 @@
-@import "city/frontpage"
+//home
+@import "smart_city_guides/home"
+//layout
+@import "smart_city_guides/layout"
+//timeline
+@import "smart_city_guides/timeline"
