--- a/app/assets/stylesheets/social_stream-base.css.sass
+++ b/app/assets/stylesheets/social_stream-base.css.sass
@@ -12,7 +12,7 @@
 @import "social_stream/base/mixin/mixin"
 @import "social_stream/base/frontpage"
 @import "social_stream/base/fonts"
-@import "social_stream/base/toolbar"
+//@import "social_stream/base/toolbar"
 @import "social_stream/base/content"
 @import "social_stream/base/content_home"
 //@import "social_stream/base/timeline"
@@ -33,8 +33,6 @@
 @import "social_stream/base/explore"
 @import "social_stream/base/explore-search"
 
-@import "smart_city_guides/home"
-@import "smart_city_guides/layout"
-@import "smart_city_guides/timeline"
+
 
 
