home_styles_changes

--- a/app/assets/stylesheets/smart_city_guide.css.sass
+++ b/app/assets/stylesheets/smart_city_guide.css.sass
@@ -4,3 +4,7 @@
 @import "smart_city_guides/layout"
 //timeline
 @import "smart_city_guides/timeline"
+//frontpage
+@import "smart_city_guides/frontpage"
+//items
+@import "smart_city_guides/items"
