--- a/app/views/home/_interest_points.html.erb
+++ b/app/views/home/_interest_points.html.erb
@@ -12,20 +12,20 @@
 <div class="option_search">
    <div class="btn-group">
     <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-    	Action
+    	Filter by
     	<span class="caret"></span>
     </a>
     <ul class="dropdown-menu">
     	<li>
 				<label class="checkbox">
 					<input type="checkbox" value="">
-					Option
+					Popular
 				</label>
     	</li>
     	<li>
 				<label class="checkbox">
 					<input type="checkbox" value="">
-					Option
+					Prize
 				</label>
     	</li>
     </ul>
@@ -38,7 +38,7 @@
   </div>
 
 <!--view tipe-->
-<div class="guide tabbable">
+<div class="guide_home tabbable">
   <ul class="nav nav-tabs">
     <li class="active">
       <a data-toggle="tab" href="#guides">guides</a>
