--- a/app/views/points/_item.html.erb
+++ b/app/views/points/_item.html.erb
@@ -1,12 +1,35 @@
-				<li class="span3">
+				<li class="">
 					<div class="thumbnail">
 						<%= image_tag('one.jpg') %>
 						<div class="caption">
-							<h4>Thumbnail</h4>
+							<h4>Alcázar</h4>
 							<p>justo odio egestas eget quam. Donec id elit </p>
 							<p>
-								<a class="btn btn-primary" href="#">Action</a>
-								<a class="btn" href="#">Action</a>
+								<a class="btn btn-primary" href="#">Add to mi guide</a>
+							</p>
+						</div>
+					</div>
+				</li>
+					<li class="">
+					<div class="thumbnail">
+						<%= image_tag('one.jpg') %>
+						<div class="caption">
+							<h4>Alcázar</h4>
+							<p>justo odio egestas eget quam. Donec id elit </p>
+							<p>
+								<a class="btn btn-primary" href="#">Add to mi guide</a>
+							</p>
+						</div>
+					</div>
+				</li>
+					<li class="">
+					<div class="thumbnail">
+						<%= image_tag('one.jpg') %>
+						<div class="caption">
+							<h4>Alcázar</h4>
+							<p>justo odio egestas eget quam. Donec id elit </p>
+							<p>
+								<a class="btn btn-primary" href="#">Add to mi guide</a>
 							</p>
 						</div>
 					</div>
