--- a/app/views/routes/_item.html.erb
+++ b/app/views/routes/_item.html.erb
@@ -1,12 +1,35 @@
-				<li class="span3">
-					<div class="thumbnail">
+				<li class="thumbnails_home">
+					<div class="thumbnail labels">
 						<%= image_tag('two.jpg') %>
 						<div class="caption">
 							<h4>Thumbnail</h4>
 							<p>justo odio egestas eget quam. Donec id elit </p>
 							<p>
-								<a class="btn btn-primary" href="#">Action</a>
-								<a class="btn" href="#">Action</a>
+								<a class="btn btn-primary" href="#">Add to my guide</a>
+							</p>
+						</div>
+					</div>
+				</li>
+				<li class="thumbnails_home">
+					<div class="thumbnail labels">
+						<%= image_tag('two.jpg') %>
+						<div class="caption">
+							<h4>Thumbnail</h4>
+							<p>justo odio egestas eget quam. Donec id elit </p>
+							<p>
+								<a class="btn btn-primary" href="#">Add to my guide</a>
+							</p>
+						</div>
+					</div>
+				</li>
+				<li class="thumbnails_home">
+					<div class="thumbnail labels">
+						<%= image_tag('two.jpg') %>
+						<div class="caption">
+							<h4>Thumbnail</h4>
+							<p>justo odio egestas eget quam. Donec id elit </p>
+							<p>
+								<a class="btn btn-primary" href="#">Add to my guide</a>
 							</p>
 						</div>
 					</div>
