--- a/app/assets/stylesheets/smart_city_guides/frontpage.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/frontpage.css.sass
@@ -15,7 +15,7 @@
 		color: #FFF
 
 .fondo   
-	background-image: url(himalaya.jpg) 
+	background-image: url(fondo2.jpg) 
 	background-repeat: repeat-y
 .pois
 	font-size: 12px
