--- a/app/assets/stylesheets/smart_city_guides/home.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/home.css.sass
@@ -16,7 +16,14 @@
 				img
 					width: 620px 
 					height: 400px
-
+			.carousel-caption
+				bottom: 0px
+				left: 3%
+				background-color: #fff
+				h1
+					font-size: 35px
+				p
+					font-size: 16px
 
 		.interest_points
 
