--- a/app/assets/stylesheets/smart_city_guides/items.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/items.css.sass
@@ -1,13 +1,12 @@
 .guide_home
-	.tab_content
-		.tab_pane
-			background-color: #000
-			ul.thumbnails
+	ul.nav
+	ul.thumbnails
+		width: 600px
+		li
+			width: 180px
+			.thumbnail
+				img
+					width: 175px
+				p
+					font-size: 12px
 
-				width: 600px
-				li
-					.thumbnail
-						img
-							width: 175px
-						p
-							font-size: 12px
