--- a/app/views/home/_interest_points.html.erb
+++ b/app/views/home/_interest_points.html.erb
@@ -39,7 +39,7 @@
 
 <!--view tipe-->
 <div class="guide_home tabbable">
-  <ul class="nav nav-tabs">
+  <ul class="nav nav-tabs pull-left">
     <li class="active">
       <a data-toggle="tab" href="#guides">guides</a>
     </li>
