--- a/app/views/home/_info_city.html.erb
+++ b/app/views/home/_info_city.html.erb
@@ -3,27 +3,26 @@
     <div id="myCarousel" class="carousel slide">
       <div class="carousel-inner">
         <div class="item active">
-          <%= image_tag('one.jpg') %>
+          <%= image_tag('toledo.jpg') %>
           <div class="container">
             <div class="carousel-caption">
-              <h1>Example headline.</h1>
+              <h1>Toledo</h1>
               <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
               <a class="btn btn-large btn-primary" href="#">Sign up today</a>
             </div>
           </div>
         </div>
         <div class="item">
-          <%= image_tag('two.jpg') %>
+          <%= image_tag('toledo3.jpg') %>
           <div class="container">
             <div class="carousel-caption">
               <h1>Another example headline.</h1>
-              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <a class="btn btn-large btn-primary" href="#">Learn more</a>
+              <p class="lead">Esta ciudad amurallada esconde un inagotable caudal de sorpresas</p>
             </div>
           </div>
         </div>
         <div class="item">
-          <%= image_tag('ninja.jpeg') %>
+          <%= image_tag('alcazar.JPG') %>
           <div class="container">
             <div class="carousel-caption">
               <h1>One more for good measure.</h1>
