--- a/app/views/points/_item.html.erb
+++ b/app/views/points/_item.html.erb
@@ -12,9 +12,9 @@
 				</li>
 					<li class="">
 					<div class="thumbnail">
-						<%= image_tag('one.jpg') %>
+						<%= image_tag('alcazar.JPG') %>
 						<div class="caption">
-							<h4>Alcázar</h4>
+							<h4>Catedral</h4>
 							<p>justo odio egestas eget quam. Donec id elit </p>
 							<p>
 								<a class="btn btn-primary" href="#">Add to mi guide</a>
@@ -26,7 +26,7 @@
 					<div class="thumbnail">
 						<%= image_tag('one.jpg') %>
 						<div class="caption">
-							<h4>Alcázar</h4>
+							<h4>Calle del Diablo</h4>
 							<p>justo odio egestas eget quam. Donec id elit </p>
 							<p>
 								<a class="btn btn-primary" href="#">Add to mi guide</a>
