changes carousel and planification home

--- a/app/assets/stylesheets/smart_city_guide.css.sass
+++ b/app/assets/stylesheets/smart_city_guide.css.sass
@@ -8,3 +8,5 @@
 @import "smart_city_guides/frontpage"
 //items
 @import "smart_city_guides/items"
+//planification
+@import "smart_city_guides/planification"
