--- a/app/views/home/_info_city.html.erb
+++ b/app/views/home/_info_city.html.erb
@@ -3,12 +3,11 @@
     <div id="myCarousel" class="carousel slide">
       <div class="carousel-inner">
         <div class="item active">
-          <%= image_tag('toledo.jpg') %>
+          <%= image_tag('panoramica_toledo.jpg') %>
           <div class="container">
             <div class="carousel-caption">
               <h1>Toledo</h1>
               <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <a class="btn btn-large btn-primary" href="#">Sign up today</a>
             </div>
           </div>
         </div>
@@ -22,12 +21,11 @@
           </div>
         </div>
         <div class="item">
-          <%= image_tag('alcazar.JPG') %>
+          <%= image_tag('toledo_rio.JPG') %>
           <div class="container">
             <div class="carousel-caption">
               <h1>One more for good measure.</h1>
               <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <a class="btn btn-large btn-primary" href="#">Browse gallery</a>
             </div>
           </div>
         </div>
