--- a/app/views/home/_planification.html.erb
+++ b/app/views/home/_planification.html.erb
@@ -1,11 +1,20 @@
-<h2>planification</h2>
+<h4>planification</h4>
 <div class="planification">
-<address>
-<strong>Twitter, Inc.</strong><br>
-795 Folsom Ave, Suite 600<br>
-San Francisco, CA 94107<br>
-<abbr title="Phone">P:</abbr> (123) 456-7890
-</address>
+<ul class="thumbnails">
+<li class="thumbnails_home">
+	<div class="thumbnail labels">
+		<ul class="">
+			<li><%= image_tag('toledo2.jpg') %></li>
+			<li><h4>Toledo en un día</h4></li>
+			<li>
+				<address>
+					795 Folsom Ave, Suite 600
+				</address>
+			</li>
+		</ul>	
+	</div>
+</li>
+
 <address>
 <strong>Twitter, Inc.</strong><br>
 795 Folsom Ave, Suite 600<br>
