--- a/app/views/points/_item.html.erb
+++ b/app/views/points/_item.html.erb
@@ -1,36 +1,73 @@
-				<li class="">
+				<li>
 					<div class="thumbnail">
-						<%= image_tag('one.jpg') %>
+						<%= image_tag('catedral.jpg') %>
 						<div class="caption">
-							<h4>Alcázar</h4>
+							<h4>Catedral Primada</h4>
 							<p>justo odio egestas eget quam. Donec id elit </p>
-							<p>
 								<a class="btn btn-primary" href="#">Add to mi guide</a>
 							</p>
 						</div>
 					</div>
 				</li>
-					<li class="">
+				<li>
+				<div class="thumbnail">
+					<%= image_tag('alcazar.JPG') %>
+					<div class="caption">
+						<h4>Alcázar</h4>
+						<p>justo odio egestas eget quam. Donec id elit </p>
+							<a class="btn btn-primary" href="#">Add to mi guide</a>
+						</p>
+					</div>
+				</div>
+				</li>
+				<li>
 					<div class="thumbnail">
-						<%= image_tag('alcazar.JPG') %>
+						<%= image_tag('toledo2.jpg') %>
 						<div class="caption">
-							<h4>Catedral</h4>
+							<h4>Callejón del Diablo, no te lo puedes perder</h4>
 							<p>justo odio egestas eget quam. Donec id elit </p>
-							<p>
 								<a class="btn btn-primary" href="#">Add to mi guide</a>
 							</p>
 						</div>
 					</div>
 				</li>
-					<li class="">
+				<li>
 					<div class="thumbnail">
-						<%= image_tag('one.jpg') %>
+						<%= image_tag('san_juan.jpg') %>
 						<div class="caption">
-							<h4>Calle del Diablo</h4>
+							<h4>San Juan de los Reyes</h4>
 							<p>justo odio egestas eget quam. Donec id elit </p>
-							<p>
 								<a class="btn btn-primary" href="#">Add to mi guide</a>
-							</p>
+						</div>
+					</div>
+				</li>
+				<li>
+					<div class="thumbnail">
+						<%= image_tag('ruta_toledo.jpg') %>
+						<div class="caption">
+							<h4>Paseo Río Tajo</h4>
+							<p>justo odio egestas eget quam. Donec id elit </p>
+								<a class="btn btn-primary" href="#">Add to mi guide</a>
+						</div>
+					</div>
+				</li>
+				<li>
+					<div class="thumbnail">
+						<%= image_tag('adolfo.jpg') %>
+						<div class="caption">
+							<h4>Paseo Río Tajo</h4>
+							<p>justo odio egestas eget quam. Donec id elit </p>
+								<a class="btn btn-primary" href="#">Add to mi guide</a>
+						</div>
+					</div>
+				</li>
+				<li>
+					<div class="thumbnail">
+						<%= image_tag('picaro.jpg') %>
+						<div class="caption">
+							<h4>Paseo Río Tajo</h4>
+							<p>justo odio egestas eget quam. Donec id elit </p>
+								<a class="btn btn-primary" href="#">Add to mi guide</a>
 						</div>
 					</div>
 				</li>
