--- a/app/assets/stylesheets/smart_city_guides/home.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/home.css.sass
@@ -17,9 +17,10 @@
 					width: 620px 
 					height: 400px
 			.carousel-caption
+				padding-top: 0
 				bottom: 0px
-				left: 3%
-				background-color: #fff
+				left: 0%
+				background: none repeat scroll 0 0 rgba(0, 0, 0, 0.75)
 				h1
 					font-size: 35px
 				p
@@ -41,18 +42,17 @@
 					display: inline-block
 					@include makeColumn(2, 0)
 					margin-top: 20px
+
 				.view_type
 					display: inline-block
 					@include makeColumn(2, 0)
 					margin-top: 20px
 					.btn
 						float: right
-				.guide
+				.guide_home
 					@include makeColumn(8, 0)
 					margin-left: 0px
-					.item_alone
-						@include makeColumn(3, 0)
-						margin-left: 2px
+
 
 
 	.right_home
