--- a/app/assets/stylesheets/smart_city_guides/items.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/items.css.sass
@@ -1,12 +1,34 @@
 .guide_home
-	ul.nav
 	ul.thumbnails
 		width: 600px
 		li
 			width: 180px
+			height: 290px
 			.thumbnail
+				height: 270px
+				h4
+					overflow: hidden
+					white-space: nowrap
+					text-overflow: ellipsis
 				img
 					width: 175px
 				p
 					font-size: 12px
+.planification
+	ul.thumbnails
+		width: 350px
+		.thumbnail
+			img
+				width: 50px
+			li
+				display: inline-block
+				h4
+					overflow: hidden
+					white-space: nowrap
+					text-overflow: ellipsis
+					font-size: 16px
+				p
+					font-size: 12px
+
+
 
