--- a/app/views/guides/_item.html.erb
+++ b/app/views/guides/_item.html.erb
@@ -1,8 +1,8 @@
 				<li class="thumbnails_home">
 					<div class="thumbnail labels">
-						<%= image_tag('ninja.jpeg') %>
+						<%= image_tag('toledo_basica.jpg') %>
 						<div class="caption">
-							<h4>Thumbnail</h4>
+							<h4>Guía básica</h4>
 							<p>justo odio egestas eget quam. Donec id elit </p>
 							<p>
 								<a class="btn btn-primary" href="#">Add to my guide</a>
@@ -14,7 +14,7 @@
 					<div class="thumbnail labels">
 						<%= image_tag('ninja.jpeg') %>
 						<div class="caption">
-							<h4>Thumbnail</h4>
+							<h4>Toledo medieval</h4>
 							<p>justo odio egestas eget quam. Donec id elit </p>
 							<p>
 								<a class="btn btn-primary" href="#">Add to my guide</a>
@@ -24,9 +24,9 @@
 				</li>
 				<li class="thumbnails_home">
 					<div class="thumbnail labels">
-						<%= image_tag('ninja.jpeg') %>
+						<%= image_tag('toledo.jpeg') %>
 						<div class="caption">
-							<h4>Thumbnail</h4>
+							<h4>Toledo en un día</h4>
 							<p>justo odio egestas eget quam. Donec id elit </p>
 							<p>
 								<a class="btn btn-primary" href="#">Add to my guide</a>
