--- a/app/views/routes/new.html.erb
+++ b/app/views/routes/new.html.erb
@@ -1,6 +1,8 @@
-<%= form_for ([@trip, @route]) do |f| %>
+<%= form_for @route do |f| %>
 	<h2>Form to create a new route</h2>
 	<%= f.label :title %>
 	<%= f.text_field :title %>
+	<%= f.hidden_field :guide_id %>
+	<%= f.hidden_field :trip_id %>
 	<%= f.submit %>
 <% end %>
