--- a/app/views/home/_planification.html.erb
+++ b/app/views/home/_planification.html.erb
@@ -1,25 +1,102 @@
-<h4>planification</h4>
-<div class="planification">
-<ul class="thumbnails">
-<li class="thumbnails_home">
-	<div class="thumbnail labels">
-		<ul class="">
-			<li><%= image_tag('toledo2.jpg') %></li>
-			<li><h4>Toledo en un día</h4></li>
-			<li>
-				<address>
-					795 Folsom Ave, Suite 600
-				</address>
-			</li>
-		</ul>	
-	</div>
-</li>
-
-<address>
-<strong>Twitter, Inc.</strong><br>
-795 Folsom Ave, Suite 600<br>
-San Francisco, CA 94107<br>
-<abbr title="Phone">P:</abbr> (123) 456-7890
-</address>
-
-</div>
+		<li class="thumbnails_home">
+			<div class="thumbnail labels">
+				<ul class="ul_planning">
+					<li class="avatar_plannings">
+						<div class="avatar"><%= image_tag('toledo2.jpg') %></div>
+					</li>
+					<li class="li_inline">
+						<div><h4>Toledo en un día</h4></div>
+						<div>
+							<address>
+								795 Folsom Ave, Suite 600
+							</address>
+						</div>
+					</li>	
+				</ul>		
+			</div>	
+		</li>
+		<li class="thumbnails_home">
+			<div class="thumbnail labels">
+				<ul class="ul_planning">
+					<li class="avatar_plannings">
+						<div class="avatar"><%= image_tag('toledo2.jpg') %></div>
+					</li>
+					<li class="li_inline">
+						<div><h4>Toledo en un día</h4></div>
+						<div>
+							<address>
+								795 Folsom Ave, Suite 600
+							</address>
+						</div>
+					</li>	
+				</ul>		
+			</div>	
+		</li>
+		<li class="thumbnails_home">
+			<div class="thumbnail labels">
+				<ul class="ul_planning">
+					<li class="avatar_plannings">
+						<div class="avatar"><%= image_tag('toledo2.jpg') %></div>
+					</li>
+					<li class="li_inline">
+						<div><h4>Toledo en un día</h4></div>
+						<div>
+							<address>
+								795 Folsom Ave, Suite 600
+							</address>
+						</div>
+					</li>	
+				</ul>		
+			</div>	
+		</li>
+				<li class="thumbnails_home">
+			<div class="thumbnail labels">
+				<ul class="ul_planning">
+					<li class="avatar_plannings">
+						<div class="avatar"><%= image_tag('toledo2.jpg') %></div>
+					</li>
+					<li class="li_inline">
+						<div><h4>Toledo en un día</h4></div>
+						<div>
+							<address>
+								795 Folsom Ave, Suite 600
+							</address>
+						</div>
+					</li>	
+				</ul>		
+			</div>	
+		</li>
+		<li class="thumbnails_home">
+			<div class="thumbnail labels">
+				<ul class="ul_planning">
+					<li class="avatar_plannings">
+						<div class="avatar"><%= image_tag('toledo2.jpg') %></div>
+					</li>
+					<li class="li_inline">
+						<div><h4>Toledo en un día</h4></div>
+						<div>
+							<address>
+								795 Folsom Ave, Suite 600
+							</address>
+						</div>
+					</li>	
+				</ul>		
+			</div>	
+		</li>
+		<li class="thumbnails_home">
+			<div class="thumbnail labels">
+				<ul class="ul_planning">
+					<li class="avatar_plannings">
+						<div class="avatar"><%= image_tag('toledo2.jpg') %></div>
+					</li>
+					<li class="li_inline">
+						<div><h4>Toledo en un día</h4></div>
+						<div>
+							<address>
+								795 Folsom Ave, Suite 600
+							</address>
+						</div>
+					</li>	
+				</ul>		
+			</div>	
+		</li>
