--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,8 +16,12 @@
 
 
 <article class="right_home">
+	<h4>planification</h4>
 	<div class="planification">
-		<%= render :partial => "home/planification" %>
+		<ul class="thumbnails">
+			<%= render :partial => "home/planification" %>
+		</ul>
+		<!--http://jqueryui.com/draggable/#sortable-->
 	</div>
 	<div class="wall">
 
