--- a/app/assets/stylesheets/smart_city_guides/items.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/items.css.sass
@@ -2,6 +2,7 @@
 	ul.thumbnails
 		width: 600px
 		li
+			margin-bottom: 0px
 			width: 180px
 			height: 290px
 			.thumbnail
@@ -14,21 +15,46 @@
 					width: 175px
 				p
 					font-size: 12px
+
+//pla
 .planification
+	border-radius: 4px 4px 4px 4px
+	overflow-y: scroll
+	overflow-x: hidden
+	height: 350px
 	ul.thumbnails
-		width: 350px
+		margin: 0
+		li
+		.thumbnails_home
+			margin-left: 0
+			margin-bottom: 10px
 		.thumbnail
+			width: 300px
+			ul
+				margin: 3px
 			img
 				width: 50px
 			li
+				text-align: left
 				display: inline-block
+				margin-right: 10px
 				h4
 					overflow: hidden
 					white-space: nowrap
 					text-overflow: ellipsis
 					font-size: 16px
+					margin: 0
+					text-align: left
+				address
+					margin: 0
 				p
 					font-size: 12px
+			.avatar_plannings
+				float: left
+				margin-bottom: 0px
+			.li-inline
+				margin-bottom: 0px
+
 
 
 
