--- a/app/assets/stylesheets/smart_city_guide.css.sass
+++ b/app/assets/stylesheets/smart_city_guide.css.sass
@@ -1,5 +1,7 @@
 //home
 @import "smart_city_guides/home"
+//items
+@import "smart_city_guides/guides"
 //layout
 @import "smart_city_guides/layout"
 //timeline
