new changes header

--- a/app/assets/stylesheets/smart_city_guides/layout.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/layout.css.sass
@@ -1,3 +1,15 @@
+.navbar 
+  .nav 
+    li
+      a
+        text-decoration: none
+        text-shadow: none 
+        color: #FFF
+.brand
+  width: 200px
+  margin: 0
+  line-height: 20px
+  color: #fff
 .content-large
   @include makeColumn(10, 0)
   margin-top: 20px
@@ -22,6 +34,12 @@
   img
     width: 20px
     padding-bottom: 4px
+    header
+    color: #fff
+    float: none
+    padding: 10px 15px
+    text-decoration: none
+    text-shadow: none
   .name
     vertical-align: bottom
   .search-nav
