--- a/app/views/layouts/_header_signed_in.erb
+++ b/app/views/layouts/_header_signed_in.erb
@@ -5,12 +5,13 @@
     <%#= link_to(image_tag('header-logo.png', :alt => t('site.name')), root_path, class: 'brand') %>
 
     <!-- FIXME: search javascript functionality in 'layouts/search' -->
-    <ul class="nav pull-left">
+    <a href="pull-left"><h2 class="brand">holamundo</h2></a>
+    <ul class="nav pull-right">
       <li>
-        <a href="/plannings">my guides</a>
+        <a class="changes_navbar" href="/plannings">my guides</a>
       </li>
       <li>
-        <a href="/diaries">my diaries</a>
+        <a class="changes_navbar" href="/diaries">my diaries</a>
       </li>
     </ul>
 
