--- a/app/assets/stylesheets/smart_city_guides/home.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/home.css.sass
@@ -23,6 +23,8 @@
 				background: none repeat scroll 0 0 rgba(0, 0, 0, 0.75)
 				h1
 					font-size: 35px
+					color: #9A9A9A
+					opacity: 0.8
 				p
 					font-size: 16px
 
@@ -56,6 +58,8 @@
 
 
 	.right_home
+		h4
+			margin-top: 0px
 		@include makeColumn(4, 0)
 		margin-left: 0px
 		
