--- a/app/assets/stylesheets/smart_city_guides/items.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/items.css.sass
@@ -1,4 +1,12 @@
 .guide_home
+	.btn-primary
+		background-color: #000
+		background-image: linear-gradient(to bottom, grey, #000000)
+		background-repeat: repeat-x
+		border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25)
+		color: white
+		text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25)
+		height: 24px
 	ul.thumbnails
 		width: 600px
 		li
@@ -6,17 +14,19 @@
 			width: 180px
 			height: 290px
 			.thumbnail
-				height: 270px
 				h4
 					overflow: hidden
 					white-space: nowrap
 					text-overflow: ellipsis
+					text-align: left
 				img
 					width: 175px
 				p
 					font-size: 12px
 
-//pla
+
+
+//planning
 .planification
 	border-radius: 4px 4px 4px 4px
 	overflow-y: scroll
