--- a/app/views/points/_item.html.erb
+++ b/app/views/points/_item.html.erb
@@ -55,7 +55,7 @@
 					<div class="thumbnail">
 						<%= image_tag('adolfo.jpg') %>
 						<div class="caption">
-							<h4>Paseo Río Tajo</h4>
+							<h4>Restaurante Adolfo</h4>
 							<p>justo odio egestas eget quam. Donec id elit </p>
 								<a class="btn btn-primary" href="#">Add to mi guide</a>
 						</div>
@@ -65,7 +65,7 @@
 					<div class="thumbnail">
 						<%= image_tag('picaro.jpg') %>
 						<div class="caption">
-							<h4>Paseo Río Tajo</h4>
+							<h4>Café Pícaro</h4>
 							<p>justo odio egestas eget quam. Donec id elit </p>
 								<a class="btn btn-primary" href="#">Add to mi guide</a>
 						</div>
