--- a/app/views/layouts/_header_signed_in.erb
+++ b/app/views/layouts/_header_signed_in.erb
@@ -16,13 +16,18 @@
     </ul>
 
     <ul class="nav pull-right">
+      <div class="search-nav pull-left">
+      <%= form_tag search_path, method: 'get', class: "navbar-search pull-right" do %>
+        <%= text_field_tag :q, nil, autocomplete: :off, class: 'search-query', placeholder: t('search.name') %>
+      <% end %>
+      </div>
       <li>
         <%= link_to current_subject do %>
           <%#= image_tag current_subject.logo.url(:small) %>
           <span class="name"><%= truncate_name(current_subject.name, length: 15) %></span>
         <% end %>
       </li>
-      <li>
+      <!--li>
         <%= link_to(raw("<i class='icon_navbar-home'></i> "), root_path)%>
       </li>   
       <li>
@@ -32,16 +37,12 @@
         <%= link_to(raw("<i class='icon_navbar-message'></i> "), conversations_path) %> 
           <!-- <span id="header_inbox_count">
             <%= link_to(current_subject.unread_messages_count.to_s, conversations_path) %>
-          </span> -->
-      </li>              
+          </span> 
+      </li> -->           
       <li> 
         <%= render partial: 'layouts/header_dropdown_menu' %>
       </li>
-          <div class="search-nav pull-right">
-      <%= form_tag search_path, method: 'get', class: "navbar-search pull-right" do %>
-        <%= text_field_tag :q, nil, autocomplete: :off, class: 'search-query', placeholder: t('search.name') %>
-      <% end %>
-    </div>
+          
     </ul>
 
   </nav>
