--- a/app/assets/stylesheets/smart_city_guides/frontpage.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/frontpage.css.sass
@@ -15,8 +15,8 @@
 		color: #FFF
 
 .fondo   
-	background-image: url(fondo2.jpg) 
-	background-repeat: repeat-y
+	background-image: url(himalaya.jpg)
+	background-size: 100%
 .pois
 	font-size: 12px
 
