--- a/app/views/guides/show.html.erb
+++ b/app/views/guides/show.html.erb
@@ -1,3 +1,47 @@
 <h2><%= @guide.title %> guide</h2>
 
-This is a guide from <%= @guide.trip.title %> trip
+<div class="guide_all tabbable">
+  <ul class="nav nav-tabs">
+    <li class="active">
+      <a data-toggle="tab" href="#info">info</a>
+    </li>
+        <li class="">
+      <a data-toggle="tab" href="#map">map</a>
+    </li>
+    <li class="">
+      <a data-toggle="tab" href="#photo">photo</a>
+    </li>
+    <li class="">
+      <a data-toggle="tab" href="#book">book</a>
+    </li>
+  </ul>
+
+  <div class="tab-content">
+
+    <div id="info" class="tab-pane active">
+      	<%= render :partial => "guides/info" %>
+    </div>
+
+    <div id="map" class="tab-pane ">
+      <ul class="thumbnails">
+        <%= render :partial => "guides/map" %>
+      </ul>
+		</div>
+
+    <div id="photo" class="tab-pane ">
+      <ul class="thumbnails">
+      	<%= render :partial => "guides/photo" %>
+			</ul>
+    </div>
+
+    <div id="book" class="tab-pane ">
+      <ul class="thumbnails">
+        <%= render :partial => "guides/book" %>
+      </ul>
+    </div>
+    
+    
+  </div>
+</div>
+
+
