--- a/app/views/guides/_map.html.erb
+++ b/app/views/guides/_map.html.erb
@@ -1,1 +1,11 @@
-    <%= gmaps(:map_options => { :container_class => "map_container", :id => "map", :class => "gmaps4rails_map", :auto_zoom => false, :zoom => 16 }, :markers => {:data => @json} )%>
+<%= gmaps(:map_options => { :container_class => "map_container", :id => "guide_map", 
+	:class => "gmaps4rails_map" }, :markers => {:data => json} )%>
+<%= yield :scripts %>
+
+<%= javascript_tag do %>
+	$('#mapTab').on('shown', function (e) {
+		//Gmaps.loadMaps();
+		google.maps.event.trigger(guide_map, 'resize');
+		Gmaps.guide_map.adjustMapToBounds();
+	});
+<% end %>
